test disrectly git commit command

--- a/src/main/resources/krdJdbc.properties
+++ b/src/main/resources/krdJdbc.properties
@@ -1,5 +1,5 @@
 #先进行单一数据库的表结构监控
 krdJdbc.driver=com.mysql.jdbc.Driver
-krdJdbc.url=http://localhost:///data
-krdJdbc.driver=com.mysql.jdbc.Driver
-krdJdbc.driver=com.mysql.jdbc.Driver
+krdJdbc.url=http://localhost///sakila
+krdJdbc.username=root
+krdJdbc.password=123456
